--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,6 +30,6 @@
   unused-packages = true
 
 [metadata.heroku]
-  root-package = "github.com/mat/besticon"
+  root-package = "github.com/joearcher/besticon"
   go-version = "go1.10.1"
   install = [ "./..." ]
