--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"name": "favicon-service (besticon)",
 	"description": "A favicon service written in Go",
-	"repository": "https://github.com/mat/besticon",
+	"repository": "https://github.com/joearcher/besticon",
 	"website": "https://github.com/mat/besticon",
 	"logo": "https://besticon-demo.herokuapp.com/icon.svg",
 	"env": {
