--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 	"name": "favicon-service (besticon)",
 	"description": "A favicon service written in Go",
 	"repository": "https://github.com/joearcher/besticon",
-	"website": "https://github.com/mat/besticon",
+	"website": "https://github.com/joearcher/besticon",
 	"logo": "https://besticon-demo.herokuapp.com/icon.svg",
 	"env": {
 		"CACHE_SIZE_MB": "64",
