--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
 	"description": "A favicon service written in Go",
 	"repository": "https://github.com/joearcher/besticon",
 	"website": "https://github.com/joearcher/besticon",
-	"logo": "https://besticon-demo.herokuapp.com/icon.svg",
+	"logo": "https://tabpinicons.herokuapp.com/icon.svg",
 	"env": {
 		"CACHE_SIZE_MB": "64",
 		"HOST_ONLY_DOMAINS": "*",
